updates to the graph functions and changing files so I can make the repository public

--- a/TeamAnalysisTest.ipynb
+++ b/TeamAnalysisTest.ipynb
@@ -69,63 +69,6 @@
     "\n",
     "teams=[volley,soccer]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, axs = plt.subplots(len(teams), 3, figsize=(20, 20))\n",
-    "plt.subplots_adjust(hspace=0.8)\n",
-    "\n",
-    "cols=['Fall','Winter','Spring']\n",
-    "        \n",
-    "for ax, col in zip(axs[0], cols):\n",
-    "    ax.set_title(col)\n",
-    "\n",
-    "for ax, row in zip(axs[:,0], self.variables):\n",
-    "    ax.set_ylabel(row, size='large')\n",
-    "\n",
-    "for col in range(3): # 3 seasons\n",
-    "\n",
-    "    if col == 0:\n",
-    "        ds = self.fallData\n",
-    "\n",
-    "    if col == 1:\n",
-    "        ds = self.wintData\n",
-    "\n",
-    "    if col == 2:\n",
-    "        ds = self.spriData\n",
-    "\n",
-    "    for row in range(len(self.variables)):\n",
-    "\n",
-    "        dates = ds.loc[:,'Date'] #gets the dates for each data set (X variable)\n",
-    "                \n",
-    "        #scatterplot\n",
-    "        axs[row,col].scatter(dates,ds.loc[:,self.variables[row]])\n",
-    "\n",
-    "        #linear regression\n",
-    "        s = ds.set_index('Date')[self.variables[row]]\n",
-    "\n",
-    "        y = s\n",
-    "        x = (s.index - pd.Timestamp(0)).days.values\n",
-    "                \n",
-    "        #calculate equation for trendline\n",
-    "        z = np.polyfit(x, y, 1)\n",
-    "        p = np.poly1d(z)\n",
-    "        axs[row,col].set_title('Regression Coefficient: ' + \"{:e}\".format(z[0])) \n",
-    "\n",
-    "        #add trendline to plot\n",
-    "        axs[row,col].plot(dates, p(x), color=\"purple\", linewidth=3, linestyle=\"--\")\n",
-    "        \n",
-    "#graph configuration\n",
-    "plt.suptitle(title, fontsize=20, y=1)\n",
-    "plt.legend([\"Data\", \"Trend\"], loc =\"lower right\")\n",
-    "plt.gcf().autofmt_xdate()\n",
-    "fig.tight_layout()\n",
-    "plt.show()"
-   ]
   }
  ],
  "metadata": {
@@ -144,7 +87,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (v3.10.6:9c7b4bd164, Aug  1 2022, 17:13:48) [Clang 13.0.0 (clang-1300.0.29.30)]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
